--- a/tutorials/unittests/python/install
+++ b/tutorials/unittests/python/install
@@ -12,5 +12,8 @@ sudo pip install nose
 # Install coverage
 sudo pip install coverage
 
+# Install PhantomJS
+sudo apt-get install -y phantomjs
+
 # Clean up downloaded archives
 sudo apt-get clean
