Added Selenium WebDriver in the Installation list.

--- a/tutorials/unittests/python/install
+++ b/tutorials/unittests/python/install
@@ -15,5 +15,8 @@ sudo pip install coverage
 # Install PhantomJS
 sudo apt-get install -y phantomjs
 
+# Install Selenium WebDriver
+sudo pip install selenium
+
 # Clean up downloaded archives
 sudo apt-get clean
