--- a/install
+++ b/install
@@ -6,17 +6,8 @@ sudo apt-get update
 # Install python-pip
 sudo apt-get install -y python-pip
 
-# Install nose
-sudo pip install nose
-
-# Install coverage
-sudo pip install coverage
-
-# Install PhantomJS
-sudo apt-get install -y phantomjs
-
-# Install Selenium WebDriver
-sudo pip install selenium
+# Install nose, behave, coverage, pexpect, selenium, phantomjs
+sudo pip install -r requirements.txt
 
 # Clean up downloaded archives
 sudo apt-get clean
